[gd_scene load_steps=19 format=3 uid="uid://sl13icpb8pu1"]

[ext_resource type="Script" path="res://scripts/airlock.gd" id="1_a8k1g"]
[ext_resource type="Texture2D" uid="uid://tgltuiygj308" path="res://res/objects/airlocks/basic.png" id="2_d4mhu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37fj5"]
size = Vector2(63, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gxjl"]
atlas = ExtResource("2_d4mhu")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt5in"]
atlas = ExtResource("2_d4mhu")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvgeg"]
atlas = ExtResource("2_d4mhu")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx04x"]
atlas = ExtResource("2_d4mhu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hrfx"]
atlas = ExtResource("2_d4mhu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wkiu"]
atlas = ExtResource("2_d4mhu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fshfn"]
atlas = ExtResource("2_d4mhu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1arm"]
atlas = ExtResource("2_d4mhu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0xlf"]
atlas = ExtResource("2_d4mhu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqew3"]
atlas = ExtResource("2_d4mhu")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i685o"]
atlas = ExtResource("2_d4mhu")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_db3aj"]
atlas = ExtResource("2_d4mhu")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xyx4k"]
animations = [{
"frames": [SubResource("AtlasTexture_1gxjl"), SubResource("AtlasTexture_yt5in"), SubResource("AtlasTexture_lvgeg"), SubResource("AtlasTexture_vx04x"), SubResource("AtlasTexture_5hrfx"), SubResource("AtlasTexture_5wkiu")],
"loop": false,
"name": &"closing",
"speed": 8.0
}, {
"frames": [SubResource("AtlasTexture_fshfn"), SubResource("AtlasTexture_o1arm"), SubResource("AtlasTexture_f0xlf"), SubResource("AtlasTexture_bqew3"), SubResource("AtlasTexture_i685o"), SubResource("AtlasTexture_db3aj")],
"loop": false,
"name": &"openning",
"speed": 8.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ntew8"]
cull_mode = 1
polygon = PackedVector2Array(-33, 33, 33, 33, 33, -33, -33, -33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0og46"]
size = Vector2(94, 96)

[node name="Airlock" type="AnimatableBody2D"]
script = ExtResource("1_a8k1g")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_37fj5")

[node name="Texture" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
frames = SubResource("SpriteFrames_xyx4k")
animation = &"openning"

[node name="Shadow" type="LightOccluder2D" parent="Texture"]
scale = Vector2(0.5, 0.5)
occluder = SubResource("OccluderPolygon2D_ntew8")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_0og46")

[connection signal="animation_finished" from="Texture" to="." method="_on_played"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entred"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
